--- a/FreeTalkServer/pom.xml
+++ b/FreeTalkServer/pom.xml
@@ -34,7 +34,7 @@
 		<profile>
 			<id>real</id>
 			<properties>
-				<environment>read</environment>
+				<environment>real</environment>
 			</properties>
 		</profile>
 	</profiles>
