--- a/FreeTalkService-0.0.1-SNAPSHOT/pom.xml
+++ b/FreeTalkService-0.0.1-SNAPSHOT/pom.xml
@@ -189,6 +189,24 @@
 			<artifactId>spring-rabbit</artifactId>
 			<version>${spring.amqp.version}</version>
 		</dependency>
+		<!-- hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>3.6.0.Final</version>
+		</dependency>
+		<!-- dependency by hibernate-core -->
+		<dependency>
+			<groupId>javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.12.1.GA</version>
+		</dependency>
+		<!-- dependency by hibernate-core -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.1</version>
+		</dependency>		
 	</dependencies>
 	<build>
 		<finalName>FreeTalkService</finalName>
@@ -217,7 +235,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -235,7 +253,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
+				<version>2.9</version>
 				<configuration>
 					<projectNameTemplate>[artifactId]-[version]</projectNameTemplate>
 					<wtpmanifest>true</wtpmanifest>
