--- a/FreeTalkService-0.0.1-SNAPSHOT/src/main/webapp/WEB-INF/web.xml
+++ b/FreeTalkService-0.0.1-SNAPSHOT/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,7 @@
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/spring/*-context.xml
-			/WEB-INF/dispatcher-servlet.xml</param-value>
+		<param-value>classpath:/spring/*-context.xml</param-value>
 	</context-param>
 	
 	<!-- 
@@ -39,10 +38,10 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<!-- 
 			<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
-			 -->
+			<!-- 
 			 <param-value>classpath:/spring/*-context.xml</param-value>
+			 -->
 		</init-param>
 	</servlet>
 
