--- a/cxf-study/pom.xml
+++ b/cxf-study/pom.xml
@@ -10,22 +10,26 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<springframework.version>3.0.7.RELEASE</springframework.version>
+		<springframework.version>3.0.1.RELEASE</springframework.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-api</artifactId>
-			<version>2.2.5</version>
+			<version>2.2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-bundle</artifactId>
-			<version>2.2.5</version>
+			<version>2.2.4</version>
 			<optional>true</optional>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-bundle-jaxrs</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
