--- a/akka-study/pom.xml
+++ b/akka-study/pom.xml
@@ -21,10 +21,25 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-actor</artifactId>
 			<version>2.0.3</version>
+		</dependency>
+		 -->
+
+		<dependency>
+			<groupId>se.scalablesolutions.akka</groupId>
+			<artifactId>akka-actor</artifactId>
+			<version>1.0</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>se.scalablesolutions.akka</groupId>
+			<artifactId>akka-typed-actor</artifactId>
+			<version>1.0</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 	<repositories>
@@ -33,5 +48,30 @@
 			<name>Typesafe Repository</name>
 			<url>http://repo.typesafe.com/typesafe/releases/</url>
 		</repository>
+		
+		<!-- 
+		<repository>
+			<id>Akka</id>
+			<name>Akka Maven2 Repository</name>
+			<url>http://akka.io/repository/</url>
+		</repository>
+		<repository>
+			<id>Multiverse</id>
+			<name>Multiverse Maven2 Repository</name>
+			<url>http://multiverse.googlecode.com/svn/maven-repository/releases/</url>
+		</repository>
+		
+		<repository>
+			<id>GuiceyFruit</id>
+			<name>GuiceyFruit Maven2 Repository</name>
+			<url>http://guiceyfruit.googlecode.com/svn/repo/releases/</url>
+		</repository>
+	
+		<repository>
+			<id>JBoss</id>
+			<name>JBoss Maven2 Repository</name>
+			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
+		</repository>		
+		 -->
 	</repositories>
 </project>
