--- a/zookeeper-study/pom.xml
+++ b/zookeeper-study/pom.xml
@@ -42,6 +42,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-framework</artifactId>
+			<version>2.1.0-incubating</version>
+		</dependency>
 	</dependencies>
 
 	<build>
