--- a/netty_study/pom.xml
+++ b/netty_study/pom.xml
@@ -21,8 +21,6 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> <groupId>org.jboss.netty</groupId> <artifactId>netty</artifactId> 
-			<version>3.2.0.Final</version> <optional>true</optional> </dependency> -->
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty</artifactId>
@@ -142,7 +140,7 @@
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.jboss.netty.example.echo.EchoClient</mainClass>
+									<mainClass>com.netty.common.NettyServer</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
