--- a/hadoop-study/pom.xml
+++ b/hadoop-study/pom.xml
@@ -29,13 +29,19 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
-			<version>1.0.3</version>
+			<version>0.20.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.mrunit</groupId>
 			<artifactId>mrunit</artifactId>
 			<version>1.0.0</version>
 			<classifier>hadoop1</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-streaming</artifactId>
+			<version>1.0.3</version>
 		</dependency>
 	</dependencies>
 
