--- a/hadoop-study/pom.xml
+++ b/hadoop-study/pom.xml
@@ -25,7 +25,7 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.3.3</version>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
@@ -37,6 +37,18 @@
 			<version>1.0.0</version>
 			<classifier>hadoop1</classifier>
 			<scope>test</scope>
+		</dependency>
+		<!-- dependency by scp deploy -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-jsch</artifactId>
+			<version>1.9.1</version>
+		</dependency>
+		<!-- dependency by scp deploy -->
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.50</version>
 		</dependency>
 	</dependencies>
 
@@ -70,9 +82,9 @@
 							<version>2.3.4-01</version>
 						</dependency>
 					</dependencies>
-				</plugin>				
+				</plugin>
 			</plugins>
-		</pluginManagement>	    
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -119,6 +131,37 @@
 									<mainClass>com.hadoop.ExecuteDriver</mainClass>
 								</transformer>
 							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.hadoop.ExecuteDriver</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<taskdef name="scp"
+									classname="org.apache.tools.ant.taskdefs.optional.ssh.Scp"
+									classpathref="maven.dependency.classpath" />
+								<scp file="target/${project.artifactId}-${project.version}.jar"
+									todir="cuckoo03:12341234@192.168.1.101:/home/cuckoo03/" 
+									trust="true"/>
+							</tasks>
 						</configuration>
 					</execution>
 				</executions>
