--- a/cascading-study/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/cascading-study/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,3 +1,4 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Thu Feb 12 21:15:00 KST 2015
+#Thu Feb 12 21:16:45 KST 2015
+org.springsource.ide.eclipse.gradle.linkedresources=
 org.springsource.ide.eclipse.gradle.rootprojectloc=
