--- a/cascading-study/pom.xml
+++ b/cascading-study/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.cascading</groupId>
 	<artifactId>cascading-study</artifactId>
-	<version>0.0.1</version>
+	<version>0.1</version>
 	<packaging>jar</packaging>
 
 	<name>cascading-study</name>
@@ -49,6 +49,18 @@
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
 			<version>${hadoop.version}</version>
+		</dependency>
+		<!-- dependency by scp deploy -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-jsch</artifactId>
+			<version>1.9.1</version>
+		</dependency>
+		<!-- dependency by scp deploy -->
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.50</version>
 		</dependency>
 	</dependencies>
 
@@ -96,9 +108,20 @@
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.hadoop.ExecuteDriver</mainClass>
+									<mainClass>com.cascading.ExecuteDriver</mainClass>
 								</transformer>
 							</transformers>
+							<!-- http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting-to-run-a-jar -->
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
 						</configuration>
 					</execution>
 				</executions>
@@ -108,11 +131,32 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.hadoop.ExecuteDriver</mainClass>
+							<mainClass>com.cascading.ExecuteDriver</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<taskdef name="scp"
+									classname="org.apache.tools.ant.taskdefs.optional.ssh.Scp"
+									classpathref="maven.dependency.classpath" />
+								<scp file="target/${project.artifactId}-${project.version}.jar"
+									todir="cuckoo03:12341234@192.168.1.101:/home/cuckoo03/" trust="true" />
+							</tasks>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+
 </project>
