--- a/spring4-study/pom.xml
+++ b/spring4-study/pom.xml
@@ -41,15 +41,23 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>1.0.0.RELEASE</version>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<version>1.0.0.RELEASE</version>
+			<scope>test</scope>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>1.0.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.18.1-GA</version>
 		</dependency>
 	</dependencies>
 
