--- a/htmlunit-study/.settings/org.eclipse.core.resources.prefs
+++ b/htmlunit-study/.settings/org.eclipse.core.resources.prefs
@@ -1,8 +1,23 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
-encoding//src/test/groovy/com/naver/cafe-login.html=UTF-8
-encoding//src/test/groovy/com/naver/cafe-target.html=UTF-8
-encoding//src/test/groovy/com/naver/list-article.html=UTF-8
-encoding//src/test/groovy/com/naver/next-page.html=UTF-8
+encoding//src/main/java/com/daum/cafe/htmlunit/article1.html=UTF-8
+encoding//src/main/java/com/daum/cafe/htmlunit/article2.html=UTF-8
+encoding//src/main/java/com/daum/cafe/jsoup/article1.html=UTF-8
+encoding//src/main/java/com/naver/blog/jsoup/article.html=UTF-8
+encoding//src/main/java/com/naver/blog/jsoup/main-page2.html=UTF-8
+encoding//src/main/java/com/naver/cafe/htmlunit/article1.html=UTF-8
+encoding//src/main/java/com/naver/cafe/jsoup/m-article1.html=UTF-8
+encoding//src/main/resources/log4j.properties=UTF-8
+encoding//src/test/groovy/com/diorcafe/htmlunit/article.html=UTF-8
+encoding//src/test/groovy/com/diorcafe/htmlunit/main-logon.html=UTF-8
+encoding//src/test/groovy/com/diorcafe/htmlunit/main.html=UTF-8
+encoding//src/test/groovy/com/diorcafe/htmlunit/target.html=UTF-8
+encoding//src/test/groovy/com/naver/blog/htmlunit/list.html=UTF-8
+encoding//src/test/groovy/com/naver/blog/htmlunit/main.html=UTF-8
+encoding//src/test/groovy/com/naver/cafe/cafe-main.html=UTF-8
+encoding//src/test/groovy/com/naver/cafe/cafe-target.html=UTF-8
+encoding//src/test/groovy/com/naver/cafe/list-article.html=UTF-8
+encoding//src/test/groovy/com/naver/cafe/next-page.html=UTF-8
+encoding//src/test/groovy/com/naver/cafe/temp.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
