--- a/htmlunit-study/pom.xml
+++ b/htmlunit-study/pom.xml
@@ -12,8 +12,28 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<springframework.version>4.0.1.RELEASE</springframework.version>
+		<log4j.version>1.2.17</log4j.version>
+		<slf4j.version>1.6.1</slf4j.version>
+		<htmlunit.version>2.14</htmlunit.version>
+		<selenium.version>2.42.0</selenium.version>
+		<httpclient.version>4.3.2</httpclient.version>
+		<!-- 
+		<htmlunit.version>2.18</htmlunit.version>
+		<selenium.version>2.52.0</selenium.version>
+		<httpclient.version>4.5.1</httpclient.version>
+		 -->
 	</properties>
-
+	<repositories>
+		<repository>
+			<id>jboss-3rd-party-releases</id>
+			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
+		</repository>
+		<repository>
+			<id>tapacross</id>
+			<url>http://121.254.177.182:8081/nexus/content/repositories/tapacross</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -27,14 +47,45 @@
 			<version>2.3.10</version>
 		</dependency>
 		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sourceforge.htmlunit</groupId>
 			<artifactId>htmlunit</artifactId>
-			<version>2.18</version>
+			<version>${htmlunit.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-htmlunit-driver</artifactId>
+			<version>${selenium.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>net.sourceforge.htmlunit</groupId>
+					<artifactId>htmlunit</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5</version>
+			<version>${httpclient.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20160212</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -46,12 +97,12 @@
 				</excludes>
 			</resource>
 			<resource>
-				<directory>src/main/resources/${environment}</directory>
+				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
 		<testResources>
 			<testResource>
-				<directory>src/test/resources/local</directory>
+				<directory>src/test/resources</directory>
 				<excludes>
 					<exclude>**/*.java</exclude>
 				</excludes>
