--- a/scala-study/.settings/org.scala-ide.sdt.core.prefs
+++ b/scala-study/.settings/org.scala-ide.sdt.core.prefs
@@ -1,3 +1,7 @@
+//src/main/java=main
+//src/main/resources=main
+//src/test/scala=tests
+P=
 Xcheck-null=false
 Xcheckinit=false
 Xdisable-assertions=false
@@ -7,16 +11,23 @@ Xfatal-warnings=false
 Xfuture=false
 Xlog-implicits=false
 Xno-uescape=false
+Xplugin=
+Xplugin-disable=
+Xplugin-require=
 Xpluginsdir=misc\\scala-devel\\plugins
 Ypresentation-debug=false
 Ypresentation-delay=0
+Ypresentation-log=
+Ypresentation-replay=
 Ypresentation-verbose=false
+apiDiff=false
 buildmanager=sbt
 compileorder=Mixed
 debugIncremental=false
 deprecation=false
 eclipse.preferences.version=1
 explaintypes=false
+feature=false
 formatter.alignParameters=false
 formatter.alignSingleLineCaseStatements=false
 formatter.alignSingleLineCaseStatements.maxArrowIndent=40
@@ -38,6 +49,7 @@ formatter.spaceInsideBrackets=false
 formatter.spaceInsideParentheses=false
 formatter.spacesWithinPatternBinders=true
 g=vars
+nameHashing=false
 no-specialization=false
 nowarn=false
 optimise=false
@@ -45,7 +57,12 @@ organizeimports.expandcollapse=expand
 organizeimports.groups=java$scala$org$com
 organizeimports.scalapackage=false
 organizeimports.wildcards=scalaz$scalaz.Scalaz
-scala.compiler.useProjectSettings=false
+recompileOnMacroDef=true
+relationsDebug=false
+scala.compiler.additionalParams=\ -Xsource\:2.10 -Ymacro-expand\:none
+scala.compiler.installation=-104483324
+scala.compiler.sourceLevel=2.10
+scala.compiler.useProjectSettings=true
 stopBuildOnError=false
 syntaxColouring.bracket.backgroundColourEnabled=false
 syntaxColouring.bracket.bold=false
@@ -139,5 +156,6 @@ syntaxColouring.xml.tagName.italic=false
 syntaxColouring.xml.tagName.underline=false
 target=jvm-1.6
 unchecked=false
+useScopesCompiler=true
 verbose=false
 withVersionClasspathValidator=false
