--- a/es5-0-0-app/.project
+++ b/es5-0-0-app/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>es-5-0-0-app</name>
+	<name>es-5-0-0-analysis</name>
 	<comment></comment>
 	<projects>
 	</projects>
